Write about self-financing in the replicating portfolio

--- a/src/routes/posts/black-shoeles-equation/index.mdx
+++ b/src/routes/posts/black-shoeles-equation/index.mdx
@@ -77,7 +77,30 @@ $$
 
 ## 複製ポートフォリオ
 
-任意のヨーロピアン・コール・オプションは、将来の損得が一致するようなポートフォリオを株式と債券を組み合わせることによって作成できる。
+任意のヨーロピアン・コール・オプションは、将来の損得が一致するようなポートフォリオを株式と債券を組み合わせることによって構築できる。
 これを **複製ポートフォリオ (replicating portfolio)** という。
 
 また、一物一価の法則により、ヨーロピアン・コール・オプションの価格はその複製ポートフォリオの価格と等しくなることから、**複製ポートフォリオの価格を計算することでヨーロピアン・コール・オプションの価格を求めることができる。**
+
+以下の方法で複製ポートフォリオを構築するものとする。
+
+1. 時刻 $t$ において、株式と債券をそれぞれ $p(t), q(t)$ だけ保有しているとする
+1. 時刻が $t + \Delta t$ になり、株式と債券の価格がそれぞれ $S(t + \Delta t), B(t + \Delta t)$ に変化したとする
+1. 複製ポートフォリオのリスク・リターン特性がヨーロピアン・コール・オプションと一致するように $p(t + \Delta t), q(t + \Delta t)$ を調整する。
+   ただし、この調整の前後で、株式と債券の保有額の合計は変化しないものとする。
+   このような取引の性質を **自己資金充足 (self-financing)** という。
+
+<Hint level="info">
+  **自己資金充足**
+
+自己資金充足とは、取引の際に自己資金を投入することなく、ポートフォリオの保有比率を変更することができる取引の性質を指す。
+
+つまり、複製ポートフォリオの構築で、時刻 $t + \Delta t$ における株式と債券の保有量 $p(t + \Delta t), q(t + \Delta t)$ を調整する際には
+
+$$
+\Delta p S(t + \Delta t) + \Delta q B(t + \Delta t) = 0
+$$
+
+が成り立つ。
+
+</Hint>
