Fix typo in the Itô formula

--- a/src/routes/posts/stochastic-differential-equation/index.mdx
+++ b/src/routes/posts/stochastic-differential-equation/index.mdx
@@ -212,7 +212,7 @@ $$
 $X(t)$ が $dX(t) = f(t, X(t)) dt + g(t, X(t)) dW(t)$ を満たす確率微分方程式の解であるとき、$h(t, X(t))$ の微分 $dh(t, X(t))$ は次のように表される。
 
 $$
-dh = \left( \dfrac{\partial h}{\partial t} + \dfrac{\partial h}{\partial X} f + \dfrac{1}{2} \dfrac{\partial^2 h}{\partial x^2} g^2 \sigma^2 \right) dt + \dfrac{\partial h}{\partial X} g dW
+dh = \left( \dfrac{\partial h}{\partial t} + \dfrac{\partial h}{\partial X} f + \dfrac{1}{2} \dfrac{\partial^2 h}{\partial X^2} g^2 \sigma^2 \right) dt + \dfrac{\partial h}{\partial X} g dW
 $$
 
 <Hint level="info">
